# schoolscouter

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
backend/: pyproject.toml
backend/app/: main.py
backend/tests/: test_health.py
docs/: architecture.md  plan.md  prd.md
frontend/: eslint.config.js  package.json  pnpm-lock.yaml
pipeline/: pyproject.toml
pipeline/schoolscouter_pipeline/: __init__.py  build_db.py
pipeline/schoolscouter_pipeline/sources/: ees_ks4.py  gias.py  ofsted.py  onspd.py
pipeline/schoolscouter_pipeline/transforms/: build_schools.py
pipeline/schoolscouter_pipeline/validation/: schemas.py
pipeline/tests/: test_build_db.py  test_build_schools.py  test_ees_ks4.py  test_gias.py  test_ofsted.py  test_onspd.py  test_smoke.py
pipeline/tests/fixtures/: ees_ks4_sample.csv  gias_sample.csv  ofsted_sample.csv  onspd_sample.csv
